--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,49 +12,45 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout repository # This step has 'uses'
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python # This step has 'uses'
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: Install Python dependencies for linting
+      - name: Install Python dependencies for linting # This step has 'run'
         run: |
           python -m pip install --upgrade pip
           pip install flake8 yamllint
 
-      - name: Lint Python files
+      - name: Lint Python files # This step has 'run'
         run: |
           flake8 app/app.py app/requirements.txt # Adjust paths if needed
-        continue-on-error: true # Allow subsequent steps to run even if linting fails
+        continue-on-error: true # This is a property of the 'step'
 
-      - name: Lint YAML files
+      - name: Lint YAML files # This step has 'run'
         run: |
           yamllint docker-compose.yml nginx/nginx.conf .github/workflows/ci-cd.yml
         continue-on-error: true
 
   build-docker-images:
     runs-on: ubuntu-latest
-    needs: lint # This job depends on the 'lint' job completing
+    needs: lint
     steps:
-      - name: Checkout repository
+      - name: Checkout repository # This step has 'uses'
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub (optional, if pushing to registry)
-        # This step is commented out for now. Uncomment and configure if you want to push images to Docker Hub.
-        # uses: docker/login-action@v3
-        # with:
-        #   username: ${{ secrets.DOCKER_USERNAME }} # You'd need to add these as GitHub Secrets
-        #   password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Log in to Docker Hub (optional, if pushing to registry) # This is commented out.
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker Compose services
-        # Use --no-push if you're not logging into a registry and pushing images
+      - name: Build Docker Compose services # This step has 'run'
         run: docker compose build --no-push
-        # If you logged in above, you could use `docker compose push` or `docker compose up --build -d`
-        # to build and push images directly.
 
-      - name: Verify built images (optional)
+      - name: Verify built images (optional) # This step has 'run'
         run: |
-          docker images # List local Docker images to confirm builds
+          docker images
