--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,12 +27,14 @@ jobs:
 
       - name: Lint Python files
         run: |
-          flake8 app/app.py app/requirements.txt
+          flake8 app/app.py \
+                 app/requirements.txt
         continue-on-error: true
 
       - name: Lint YAML files
         run: |
-          yamllint docker-compose.yml nginx/nginx.conf .github/workflows/ci-cd.yml
+          yamllint docker-compose.yml \
+                     .github/workflows/ci-cd.yml
         continue-on-error: true
 
   build-docker-images:
