--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,3 +1,4 @@
+---
 name: CI/CD Pipeline
 
 on:
@@ -27,13 +28,13 @@ jobs:
 
       - name: Lint Python files
         run: |
-          flake8 app/app.py \
+          flake8 app/app.py
         continue-on-error: true
 
       - name: Lint YAML files
         run: |
-          yamllint docker-compose.yml \
-                     .github/workflows/ci-cd.yml
+          yamllint docker-compose.yml
+          yamllint .github/workflows/ci-cd.yml
         continue-on-error: true
 
   build-docker-images:
@@ -43,7 +44,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub # Log in to Docker Hub
+      - name: Log in to Docker Hub  # Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
