--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,21 +37,36 @@ jobs:
         continue-on-error: true
 
   build-docker-images:
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+        runs-on: ubuntu-latest
+        needs: lint # This job depends on the 'lint' job completing
+        steps:
+          - name: Checkout repository
+            uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub  # Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          - name: Log in to Docker Hub
+            uses: docker/login-action@v3
+            with:
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }} # Use a PAT for password
 
-      - name: Build Docker Compose services
-        run: docker compose build
+          - name: Build Docker Compose services
+            run: |
+              # Build the specific 'web_app' service image
+              docker compose build web_app
+              # Tag the image with your Docker Hub username/repo:tag
+              # Replace 'your-dockerhub-username' with your actual Docker Hub username
+              # Replace 'realistic-infra-app' with your desired image name on Docker Hub
+              docker tag flask_app your-dockerhub-username/realistic-infra-app:latest
+              # Or, for versioning, use a commit SHA or a semantic version:
+              # docker tag flask_app your-dockerhub-username/realistic-infra-app:${{ github.sha }}
 
-      - name: Verify built images (optional)
-        run: |
-          docker images
+          - name: Push Docker image to Docker Hub
+            run: |
+              # Push the tagged image
+              docker push your-dockerhub-username/realistic-infra-app:latest
+              # If you used commit SHA for tagging:
+              # docker push your-dockerhub-username/realistic-infra-app:${{ github.sha }}
+
+          - name: Verify built images (optional - runs locally in runner)
+            run: |
+              docker images # This lists images on the runner, not pushed ones
